--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,20 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: password
     volumes:
-      - postgres_data:/var/lib/postgresql/data   # ← ★ここ修正！！
+      - postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
 
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     tty: true
     stdin_open: true
+    command: bash -c "rm -f tmp/pids/server.pid && bin/rails s -b 0.0.0.0"
     volumes:
       - .:/app
       - bundle_data:/usr/local/bundle:cached
       - node_modules:/app/node_modules
+      - storage_data:/app/storage   # ★ 追加！！！
     environment:
       TZ: Asia/Tokyo
       SELENIUM_DRIVER_URL: http://chrome:4444/wd/hub
@@ -40,3 +41,5 @@ volumes:
   postgres_data:
   bundle_data:
   node_modules:
+  storage_data:   # ★ 追加！！！
+
